# npp_project1

./: Developer_guide.md  README.md  User_guide.md  tower-defense.cabal
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.6.7/: package.cache  tower-defense-0.1.0.0-inplace.conf
dist-newstyle/packagedb/ghc-9.8.2/: package.cache  tower-defense-0.1.0.0-inplace.conf
src/: GameLogic.hs  Types.hs  UI.hs
