cabal-version: 3.0
name: tower-defense
version: 0.1.0.0
build-type: Simple
license: MIT

common warnings
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints

library
  import: warnings
  exposed-modules:
    GameLogic
    Types
    UI
  hs-source-dirs: src
  build-depends:
    base >=4.16 && <5,
    brick >=2.1 && <2.7,
    containers >=0.6 && <0.8,
    mtl >=2.2 && <2.4,
    vty >=6.0 && <6.3,
    vty-crossplatform >=0.5 && <0.6
  default-language: Haskell2010

executable tower-defense
  import: warnings
  main-is: Main.hs
  hs-source-dirs: app
  ghc-options:
    -threaded
  build-depends:
    base >=4.16 && <5,
    tower-defense
  default-language: Haskell2010
